...
                    Label("ホーム", systemImage: "house.fill")
                }

            if canViewBookings {
                CalendarView()
                    .tabItem {
                        Label("カレンダー", systemImage: "calendar")
                    }
            }

            if minpakuModeEnabled && canViewBookings {
                BookingView()
                    .tabItem {
...
